# il-energy

./: .env.example  .gitignore  CLAUDE.md  EVERGREEN.spec  NEXT_STEPS.md  README.md  build_app.py  pyproject.toml
docs/: energy_analysis_guide.md  project-overview.html
plans/: plan-a-windows-vm-on-mac.md  plan-b-windows-intel-pc.md
src/il_energy/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py  gui.py  models.py
src/il_energy/analysis/: windows.py
src/il_energy/envelope/: __init__.py  h_value.py  idf_surface_parser.py  report_1045.py  report_h.py
src/il_energy/postprocessing/: metrics.py  normalizer.py  zone_aggregator.py
src/il_energy/rating/: calculator.py
src/il_energy/reference/: box_generator.py  generator.py
src/il_energy/report/: generator.py  idf_class_registry.py  idf_object_report.py
src/il_energy/simulation/: idf_object_parser.py  idf_parser.py  idf_v89_converter.py  runner.py  si5282_preprocessor.py  sql_parser.py
src/il_energy/utils/: zone_naming.py
src/il_energy/web/: __init__.py  app.py  jobs.py  routes.py
src/il_energy/web/static/: app.js  style.css
src/il_energy/web/templates/: index.html
standards/si5282/: aluminum_frames.json  directions.json  energyplus_inputs.json  ep_ref_values.json  glazing_conditions.json  glazing_prescriptive.json  glazing_thresholds.json  h_thresholds.json  natural_ventilation.json  rating_thresholds.json  si1045_resistance.json  surface_roughness.json  ventilation_benefit.json  wind_data.json  wind_pressure_coefficients.json
tests/: conftest.py  test_config.py  test_nili_regression.py
tests/fixtures/nili_golden/: h_values.csv  residential_rating.json  units.csv  windows.csv
tests/test_analysis/: test_windows.py
tests/test_envelope/: test_h_value.py
tests/test_postprocessing/: test_metrics.py  test_normalizer.py  test_zone_aggregator.py
tests/test_rating/: test_calculator.py
tests/test_report/: test_generator.py
tests/test_simulation/: test_idf_object_parser.py  test_idf_parser.py  test_sql_parser.py
weather/: README.md
